--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ spool/
 tmp
 www/*.*
 www/*/
+!www/.htaccess
 !www/swarmtv
 private/codeigniter/application/config/database.php
 private/codeigniter/application/config/config.php
+www/swarmtv/libraries/arbor/.DS_Store
