--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,4 @@ www/*/
 !www/swarmtv
 private/codeigniter/application/config/database.php
 private/codeigniter/application/config/config.php
-.DS_Store
+www/swarmtv/libraries/arbor/.DS_Store
