--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ private/codeigniter/application/config/config.php
 www/swarmtv/assets/audio
 www/swarmtv/assets/image
 www/swarmtv/assets/video
+www/swarmtv/assets/videoposters
+!dbinfo.php
+
